# quizlr

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROJECT_PLAN.md  README.md  TODO.md  build-web.sh  cspell.json  justfile
.cargo/: audit.toml
.context/: CHALLENGES.md  LESSONSLEARNED.md
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  SECURITY.md  branch-protection.json  dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: changelog.md  faq.md  glossary.md  roadmap.md
docs/src/developer-guide/: README.md  architecture.md  building.md  contributing.md  development-setup.md  extending.md  extension-architecture.md  llm-providers.md  project-structure.md  storage-backends.md  testing.md
docs/src/reference/: extensions-api.md  llm-integration.md  question-types.md  quiz-engine.md  scoring-strategies.md  storage-api.md
docs/src/user-guide/: README.md  api-keys.md  authentication.md  configuration.md  creating-content.md  data-management.md  data-sources.md  getting-started.md  installation.md  managing-progress.md  troubleshooting.md  using-quizlr.md
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts
e2e/tests/: home.spec.ts  quiz-flow.spec.ts
github-issues/: blank-screen-issue.md  docs-build-error.md  e2e-test-errors.md  lint-errors.md  styling-not-applied.md
quizlr-core/: Cargo.toml
quizlr-core/src/: error.rs  lib.rs  test_utils.rs
quizlr-core/src/adaptive/: mod.rs
quizlr-core/src/auth/: mod.rs
quizlr-core/src/curriculum/: mod.rs
quizlr-core/src/ffi/: mod.rs
quizlr-core/src/graph/: mod.rs
quizlr-core/src/llm/: mod.rs
quizlr-core/src/quiz/: mod.rs  question.rs  question_tests.rs  quiz.rs  quiz_impl.rs  quiz_impl_tests.rs  quiz_tests.rs  scoring.rs  scoring_tests.rs  session.rs  session_tests.rs
quizlr-core/src/storage/: mod.rs
quizlr-core/tests/: integration_test.rs
quizlr-web/: Cargo.toml  index.html  test-build.sh
quizlr-web/src/: app.rs  main.rs
quizlr-web/style/: main.css  main.css.map  main.scss
quizlr-web/tests/: build_error_prevention.rs  mount_test.rs  ui_test.rs  ui_visibility_test.rs
scripts/: check-all.sh  install-hooks.sh  monitor.sh  release.sh  setup-dev.sh
