[package]
name = "quizlr-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }

# WASM support
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# Graph algorithms
petgraph = { version = "0.6", features = ["serde-1"] }

# Cryptography
ring = "0.17"
base64 = "0.22"

# LLM integration  
genai = "0.3"

# OAuth/OIDC
openidconnect = "4.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# GitHub API
octocrab = "0.44"

# PDF parsing
lopdf = "0.35"

# Storage and async
async-trait = "0.1"

# Random number generation
rand = "0.8"

# OpenTelemetry
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
tracing-opentelemetry = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Storage",
    "console",
] }
js-sys = "0.3"

[dev-dependencies]
mockall = { workspace = true }
tokio-test = "0.4"