[package]
name = "quizlr-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "quizlr-web"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Core library
quizlr-core = { path = "../quizlr-core", default-features = false, features = ["wasm"] }

# Leptos CSR
leptos = "0.7"
leptos_meta = "0.7"
leptos_router = "0.7"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"

# Web APIs
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Storage",
    "Navigator",
    "Url",
    "UrlSearchParams",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Response",
    "RequestInit",
    "RequestMode",
    "Headers",
    "console",
] }
js-sys = "0.3"

# Graph visualization
# d3-rs = { version = "0.1", optional = true } # Not available yet, will use JS interop

# IndexedDB
indexed_db_futures = "0.5"

# Styling
stylers = "0.3"

[features]
default = []
# graph-viz = ["d3-rs"]


[package.metadata.leptos]
output-name = "quizlr"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["csr"]
bin-default-features = false
lib-features = ["csr"]
lib-default-features = false